--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>APS Chat App</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <title>Awareness Comunication Chat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
